# email_pass

./: .gitignore  Cargo.toml  Makefile  README.md
src/: email.rs  errors.rs  lib.rs  password.rs  serde_feature.rs  tests.rs
src/legacy/: email.rs  mod.rs  password.rs  tests.rs
src/password/: checker.rs  legacy.rs  safe.rs
src/typed/: email.rs  mod.rs  password.rs  password_checker.rs  serde_feature.rs  tests.rs
