[package]
name = "email_pass"
version = "0.5.1"
edition = "2021"
authors = ["johnteper <git@johnteper.me>"]
description = "Email and Password Type in Rust"
homepage = "https://github.com/jonhteper/email_pass"
license = "MIT"
repository = "https://github.com/jonhteper/email_pass"
keywords = ["email", "password", "types", "type", "credentials"]

[dependencies]
bcrypt = "0.14.0"
regex = "1.7.0"
zxcvbn = "2.2.1"

[features]
legacy = []