[package]
name = "email_pass"
version = "0.8.1"
edition = "2021"
authors = ["johnteper <git@johnteper.me>"]
description = "Email and Password Type in Rust"
homepage = "https://github.com/jonhteper/email_pass"
license = "MIT"
repository = "https://github.com/jonhteper/email_pass"
keywords = ["email", "password", "types", "type", "credentials"]

[dependencies]
bcrypt = "0.15.0"
regex = "1.7.0"
zxcvbn = "2.2.1"
serde = { version = "1", optional = true }
once_cell = "1.18.0"
thiserror = "1.0.50"


[dev-dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }

[features]
legacy = []
serde = ["dep:serde"]
